removed the use of a library removed from the java standard library